tests/bonsai/error/invalid_name.bonsai
func main(x: f1_1_1) -> i32 {
    return 0;
}
