tests/bonsai/error/invalid_name.expect
---CODE---
-1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:53
tests/bonsai/error/invalid_name.bonsai:1:14: [parse error] unknown type: f1_1_1

func main(x: f1_1_1) -> i32 {
             ^^^^^^
